--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <nav id="nav1"> 
                 <div class="home__button">
-                    <a class="btn btn-primary" id="hbutton" href="./home.html" role="button">HOME</a>
+                    <a class="btn btn-primary" id="hbutton" href="./views/home.html" role="button">HOME</a>
                 </div>
                 <div class="nav__btn">
                     <ul class="nav nav-pills">
