--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <title>Bringn</title>
 </head>
 <body>
-    <div class="pagina__1">
-        <header>
-            <div class="hd">
+    <div class="container-fluid">
+        <div class="container-fluid row bloqueGeneral"> 
+                <div class="col-2 bloque1"></div>
+                <header class="col-8 bloque2">
                 <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
                 <style>
                     @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
@@ -22,37 +23,38 @@
                 <style>
                     @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
                 </style>
-                <div class="perfil">
+                </header>
+                <div class="col-2 bloque3">
                     <span>
-                        <p class="p__perfil">PERFIL</p>
+                    <p class="p__perfil">PERFIL</p>
                         <img class="img__perfil" src="./SASS/resources/Masla.jpg" alt="Foto de Perfil">
                     </span>
                 </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="home__button">
+                <a class="btn btn-primary" id="hbutton" href="./views/home.html" role="button">HOME</a>
             </div>
-            <nav id="nav1"> 
-                <div class="home__button">
-                    <a class="btn btn-primary" id="hbutton" href="./views/home.html" role="button">HOME</a>
-                </div>
-                <div class="nav__btn">
-                    <ul class="nav nav-pills">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" id="obutton" href="./views/ofrecer.html">OFRECER</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="ebutton" href="./views/encargar.html">ENCARGAR</a>
-                        </li>
+            <div class="nav__btn">
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" id="obutton" href="./views/ofrecer.html">OFRECER</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="ebutton" href="./views/encargar.html">ENCARGAR</a>
+                    </li>
+                </ul>
+            </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"> 
+                        Mas +
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#">¿Cómo funciona?</a></li>
+                        <li><a class="dropdown-item" href="#">Quienes somos</a></li>
                     </ul>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"> 
-                            Mas +
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#">¿Cómo funciona?</a></li>
-                            <li><a class="dropdown-item" href="#">Quienes somos</a></li>
-                        </ul>
-                    </div>
                 </div>
-            </nav>
+        </nav>
         </header>
 
     <!-- block -->
