update nav y header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid row bloqueGeneral"> 
                 <div class="col-2 bloque1"></div>
                 <header class="col-8 bloque2">
-                <h1><a class="btn__h1" href="./home.html">Bringn</a></h1>
+                <h1><a class="btn__h1" href="./views/home.html">Bringn</a></h1>
                 <style>
                     @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
                 </style>
@@ -55,15 +55,14 @@
                     </ul>
                 </div>
         </nav>
-        </header>
 
     <!-- block -->
     <section id="Home">
     <main class="bt">
-        <button type="button" class="btn btn-primary" id="bt__1" onclick="window.location='iniciarsesion.html'">Iniciar sesión</button>
+        <button type="button" class="btn btn-primary" id="bt__1"><a id="bt__1" href="./views/iniciarsesion.html">Iniciar sesión</a></button>
         <br>
         <br>
-        <button type="button" class="btn btn-secondary" id="bt__2" onclick="window.location='registro.html'">Registrarse</button>
+        <button type="button" class="btn btn-secondary" id="bt__2"><a id="bt__2" href="./views/registro.html">Registrarse</a></button>
     </main>
     </section>
     
