Cambio de px a vh/vw

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 </header>
                 <div class="col-2 bloque3">
                     <span>
-                    <p class="p__perfil">PERFIL</p>
-                        <img class="img__perfil" src="./SASS/resources/Masla.jpg" alt="Foto de Perfil">
+                        <a href="./views/error404.html"><img class="img__perfil" src="./SASS/resources/Masla.jpg" alt="Foto de Perfil"></a>
                     </span>
                 </div>
         </div>
